--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -82,15 +82,18 @@ import Logo from "./Logo.astro";
     align-items: center;
     justify-content: center;
     gap: var(--space-2xs);
-    background: var(--mauve-3);
+    background: var(--mauve-12);
+    color: var(--mauve-1);
     line-height: 1;
+    font-weight: var(--font-weight-bold);
     padding-block: var(--space-xs);
     padding-inline: var(--space-xs) var(--space-m);
     border-radius: var(--radius-full);
     border: none;
 
     &:hover {
-      background: var(--mauve-4);
+      background: var(--violet-9);
+      color: white;
     }
 
     &:focus {
