--- a/src/components/SubmitForm/form.module.scss
+++ b/src/components/SubmitForm/form.module.scss
@@ -1,3 +1,7 @@
+.submitForm {
+  padding-block-end: var(--space-2xl);
+}
+
 .header {
   text-align: center;
   font-size: var(--step-4);
@@ -8,8 +12,8 @@
   display: flex;
   align-items: center;
   gap: var(--space-xs);
-  background: var(--violet-9);
-  color: white;
+  background: var(--mauve-12);
+  color: var(--mauve-1);
   border: none;
   cursor: pointer;
   border-radius: var(--radius-full);
@@ -18,7 +22,8 @@
   margin-inline: auto;
 
   &:hover {
-    background: var(--violet-10);
+    background: var(--violet-9);
+    color: white;
   }
 
   &[disabled] {
