--- a/src/components/SubmitForm/steps.module.scss
+++ b/src/components/SubmitForm/steps.module.scss
@@ -10,7 +10,7 @@
   grid-template:
     "number title"
     "line content";
-  grid-template-columns: 40px 1fr;
+  grid-template-columns: var(--space-2xl) 1fr;
   counter-increment: step;
   column-gap: var(--space-m);
 
@@ -23,8 +23,8 @@
     font-weight: var(--font-weight-bold);
     background: var(--mauve-4);
     border-radius: var(--radius-full);
-    width: 40px;
-    height: 40px;
+    width: var(--space-2xl);
+    height: var(--space-2xl);
   }
 
   &:not(:last-child)::after {
@@ -35,6 +35,17 @@
     width: 3px;
     height: 100%;
     background: var(--mauve-4);
+  }
+
+  @media (max-width: 480px) {
+    grid-template:
+      "number title"
+      "content content";
+    grid-template-columns: var(--space-2xl) 1fr;
+
+    &:not(:last-child)::after {
+      content: unset;
+    }
   }
 }
 
@@ -47,7 +58,7 @@
 .stepContent {
   grid-area: content;
   padding-block-start: var(--space-s);
-  padding-block-end: var(--space-xl);
+  padding-block-end: var(--space-3xl);
   display: flex;
   flex-direction: column;
   gap: var(--space-l);
