--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -9,8 +9,8 @@ body.dark {
 }
 
 body {
-  color: var(--orange-12);
-  background-color: var(--orange-1);
+  color: var(--mauve-12);
+  background-color: var(--mauve-1);
   display: flex;
   min-height: 100%;
   position: relative;
@@ -24,7 +24,7 @@ body {
 }
 
 ::selection {
-  background: var(--orange-5);
+  background: var(--mauve-5);
 }
 
 h1,
@@ -37,7 +37,6 @@ h6 {
 }
 
 h1 {
-  font-family: var(--font-display);
   font-size: var(--step-5);
   line-height: var(--line-height-h1);
   letter-spacing: var(--letter-spacing-condensed);
