--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
 import Icon from "./Icon.astro";
+import Logo from "./Logo.astro";
 ---
 
 <script>
-  import { sand, sandDark } from "@radix-ui/colors";
+  import { mauve, mauveDark } from "@radix-ui/colors";
 
   type Theme = "light" | "dark";
 
@@ -32,7 +33,7 @@ import Icon from "./Icon.astro";
     if (metaTheme !== null)
       metaTheme.setAttribute(
         "content",
-        theme === "dark" ? sandDark.sand1 : sand.sand1
+        theme === "dark" ? mauveDark.mauve1 : mauve.mauve1
       );
   };
 
@@ -41,25 +42,15 @@ import Icon from "./Icon.astro";
 </script>
 
 <header transition:persist>
-  <nav>
-    <a class="wordmark" href="/">Genderswap.fm</a>
-    <div class="toggle">
-      <button
-        type="button"
-        data-theme-toggle-light
-        aria-label="Enable light theme"
+  <div class="container">
+    <Logo />
+    <nav>
+      <a href="/new" class="button">
+        <Icon icon="add" />
+         Submit a cover</a
       >
-        <Icon icon="sun" />
-      </button>
-      <button
-        type="button"
-        data-theme-toggle-dark
-        aria-label="Enable dark theme"
-      >
-        <Icon icon="moon" />
-      </button>
-    </div>
-  </nav>
+    </nav>
+  </div>
 </header>
 
 <style lang="scss">
@@ -68,65 +59,46 @@ import Icon from "./Icon.astro";
     position: sticky;
     top: 0;
     z-index: 1000;
-    padding-inline-start: 1.5rem;
-    padding-inline-end: 1.5rem;
+    padding-inline-start: var(--space-m);
+    padding-inline-end: var(--space-m);
+  }
 
-    &::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      z-index: -1;
-      background: var(--orange-1);
-      opacity: 0.96;
-      box-shadow: 0 1px 0 var(--sand-a6);
-    }
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--space-s) 0;
   }
 
   nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 0;
+    justify-content: center;
+    gap: var(--space-s);
   }
 
-  .wordmark {
-    font-size: var(--step-0);
-    font-family: var(--font-sans);
-    font-weight: var(--font-weight-bold);
-    text-decoration: "none";
-    position: "relative";
-    bottom: "-0.1em";
-  }
-
-  .toggle {
-    position: relative;
+  .button {
     display: flex;
     align-items: center;
-    gap: 0.2em;
-    margin-inline-start: 0.5em;
+    justify-content: center;
+    gap: var(--space-2xs);
+    background: var(--mauve-12);
+    color: var(--mauve-1);
+    line-height: 1;
+    font-weight: var(--font-weight-bold);
+    padding-block: var(--space-xs);
+    padding-inline: var(--space-xs) var(--space-m);
     border-radius: var(--radius-full);
-    line-height: 0;
+    border: none;
 
-    button {
-      border: none;
-      background: none;
-      width: 32px;
-      height: 32px;
-      border-radius: var(--radius-full);
-      color: var(--sand-11);
-      cursor: pointer;
+    &:hover {
+      background: var(--violet-9);
+      color: white;
+    }
 
-      &[data-theme-toggle-light].active,
-      &[data-theme-toggle-light]:hover {
-        background: var(--orange-3);
-        color: var(--orange-11);
-      }
-
-      &[data-theme-toggle-dark].active,
-      &[data-theme-toggle-dark]:hover {
-        background: var(--violet-3);
-        color: var(--violet-11);
-      }
+    &:focus {
+      outline: 3px solid var(--violet-a9);
+      outline-offset: 3px;
     }
   }
 </style>
