--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -1,5 +1,5 @@
 ---
-import { iconData, type IconType } from "./IconTypes";
+import { iconData, type IconType } from "../types/icons";
 
 export interface Props {
   /**
@@ -44,12 +44,10 @@ const pathData =
   .icon {
     display: inline-block;
     flex-shrink: 0;
-    width: 24px;
-    height: 24px;
   }
 
   .icon.small {
-    width: 16px;
-    height: 16px;
+    width: 0.6666em;
+    height: 0.6666em;
   }
 </style>
