--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,34 @@
 ---
+import CoverCard from "../components/CoverCard.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import { supabase } from "../lib/supabase";
+
+const { data: covers } = await supabase
+  .from("covers")
+  .select("original_id, cover_id, slug")
+  .order("created_at", { ascending: false });
 ---
 
 <BaseLayout
   title="Genderswap.fm"
-  description="Some covers deliver the age-old simple pleasures of drag…"
+  description="Some covers deliver the age-old simple pleasures of drag."
 >
   <div class="main">
-    <h1>Genderswap.fm</h1>
-    <p>Work in progress.</p>
+    <header>
+      <h1>Genderswap.fm</h1>
+      <p>Some covers deliver the age-old simple pleasures of drag.</p>
+    </header>
+    <div class="covers-grid">
+      {
+        covers?.map((cover) => (
+          <CoverCard
+            originalId={cover.original_id}
+            coverId={cover.cover_id}
+            slug={cover.slug}
+          />
+        ))
+      }
+    </div>
   </div>
 </BaseLayout>
 
@@ -19,12 +39,25 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: var(--space-3xl);
     flex: 1;
-    height: 100%;
+    min-height: 100%;
+    padding: var(--space-xl);
 
     p {
       font-size: var(--step-1);
       margin-block-start: 0.4em;
     }
+  }
+
+  header {
+    text-wrap: balance;
+  }
+
+  .covers-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: var(--space-xl);
+    row-gap: var(--space-3xl);
   }
 </style>
