--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,15 +1,22 @@
-@import "@radix-ui/colors/sand.css";
-@import "@radix-ui/colors/sand-alpha.css";
-@import "@radix-ui/colors/sand-dark.css";
-@import "@radix-ui/colors/sand-dark-alpha.css";
+@import "@radix-ui/colors/mauve.css";
+@import "@radix-ui/colors/mauve-alpha.css";
+@import "@radix-ui/colors/mauve-dark.css";
+@import "@radix-ui/colors/mauve-dark-alpha.css";
+
+@import "@radix-ui/colors/violet.css";
+@import "@radix-ui/colors/violet-alpha.css";
+@import "@radix-ui/colors/violet-dark.css";
+@import "@radix-ui/colors/violet-dark-alpha.css";
 
 @import "@radix-ui/colors/orange.css";
 @import "@radix-ui/colors/orange-alpha.css";
 @import "@radix-ui/colors/orange-dark.css";
 @import "@radix-ui/colors/orange-dark-alpha.css";
 
-@import "@radix-ui/colors/violet.css";
-@import "@radix-ui/colors/violet-dark.css";
+@import "@radix-ui/colors/red.css";
+@import "@radix-ui/colors/red-alpha.css";
+@import "@radix-ui/colors/red-dark.css";
+@import "@radix-ui/colors/red-dark-alpha.css";
 
 @import "@radix-ui/colors/white-alpha.css";
 @import "@radix-ui/colors/black-alpha.css";
@@ -17,27 +24,33 @@
 :root {
   /* Font families */
   --font-display: swear-display, serif;
-  --font-sans: system-ui, -apple-system, "Segoe UI", roboto, "Helvetica Neue",
-    sans-serif, serif;
-  --font-mono: ui-monospace, menlo, monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-sans: indivisible, system-ui, -apple-system, "Segoe UI", roboto,
+    "Helvetica Neue", sans-serif, serif;
 
-  /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.5,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
-  --step--2: clamp(0.5556rem, 0.7426rem + -0.2413vw, 0.6944rem);
-  --step--1: clamp(0.8331rem, 0.8331rem + 0vw, 0.8331rem);
-  --step-0: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
-  --step-1: clamp(1.2rem, 0.9652rem + 1.1739vw, 1.875rem);
-  --step-2: clamp(1.44rem, 0.9626rem + 2.387vw, 2.8125rem);
-  --step-3: clamp(1.7281rem, 0.8618rem + 4.3315vw, 4.2188rem);
-  --step-4: clamp(2.0738rem, 0.594rem + 7.3989vw, 6.3281rem);
-  --step-5: clamp(2.4881rem, 0.0518rem + 12.1815vw, 9.4925rem);
+  /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,22,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --step--1: clamp(0.8331rem, 0.7642rem + 0.3446vw, 1.0313rem);
+  --step-0: clamp(1rem, 0.8696rem + 0.6522vw, 1.375rem);
+  --step-1: clamp(1.2rem, 0.9798rem + 1.1011vw, 1.8331rem);
+  --step-2: clamp(1.44rem, 1.0911rem + 1.7446vw, 2.4431rem);
+  --step-3: clamp(1.7281rem, 1.1964rem + 2.6587vw, 3.2569rem);
+  --step-4: clamp(2.0738rem, 1.2851rem + 3.9435vw, 4.3412rem);
+  --step-5: clamp(2.4881rem, 1.3407rem + 5.737vw, 5.7869rem);
+
+  /* @link https://utopia.fyi/space/calculator?c=320,8,1.2,1240,12,1.333,6,2,&s=0.75|0.5,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --space-2xs: clamp(0.25rem, 0.2065rem + 0.2174vw, 0.375rem);
+  --space-xs: clamp(0.375rem, 0.3098rem + 0.3261vw, 0.5625rem);
+  --space-s: clamp(0.5rem, 0.413rem + 0.4348vw, 0.75rem);
+  --space-m: clamp(0.75rem, 0.6196rem + 0.6522vw, 1.125rem);
+  --space-l: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
+  --space-xl: clamp(1.5rem, 1.2391rem + 1.3043vw, 2.25rem);
+  --space-2xl: clamp(2rem, 1.6522rem + 1.7391vw, 3rem);
+  --space-3xl: clamp(3rem, 2.4783rem + 2.6087vw, 4.5rem);
 
   /* Line heights */
   --line-height-h1: 1;
   --line-height-h2: 1.1;
   --line-height-h3: 1.2;
-  --line-height-body: 1.5;
+  --line-height-body: 1.4;
   --line-height-small: 1.4;
 
   /* Letter spacing */
@@ -46,13 +59,13 @@
   --letter-spacing-loose: 0.01em;
 
   /* Radii */
-  --radius-xs: 0.25rem;
-  --radius-sm: 0.5rem;
-  --radius-md: 1rem;
-  --radius-lg: 1.5rem;
+  --radius-xs: var(--space-xs);
+  --radius-s: var(--space-s);
+  --radius-m: var(--space-m);
+  --radius-l: var(--space-l);
   --radius-full: 9999px;
 
   /* Font weights */
   --font-weight-normal: 400;
-  --font-weight-bold: 700;
+  --font-weight-bold: 600;
 }
