--- a/src/components/SubmitForm/form.module.scss
+++ b/src/components/SubmitForm/form.module.scss
@@ -20,6 +20,7 @@
   padding-block: var(--space-xs);
   padding-inline: var(--space-s) var(--space-m);
   margin-inline: auto;
+  font-weight: var(--font-weight-bold);
 
   &:hover {
     background: var(--violet-9);
