--- a/src/pages/new/index.astro
+++ b/src/pages/new/index.astro
@@ -6,6 +6,6 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 <BaseLayout title="Submit a cover · Genderswap.fm">
   <Container>
-    <SubmitForm client:load />
+    <SubmitForm client:only />
   </Container>
 </BaseLayout>
