--- a/src/components/CoverCard.astro
+++ b/src/components/CoverCard.astro
@@ -69,7 +69,7 @@ const { data: coverSong } = await supabase
     flex-direction: column;
     align-items: center;
     align-self: flex-start;
-    gap: var(--space-xl);
+    gap: var(--space-2xl);
     text-align: center;
 
     &:hover {
