--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,6 +61,7 @@ import Logo from "./Logo.astro";
     z-index: 1000;
     padding-inline-start: var(--space-m);
     padding-inline-end: var(--space-m);
+    pointer-events: none;
   }
 
   .container {
@@ -75,6 +76,7 @@ import Logo from "./Logo.astro";
     align-items: center;
     justify-content: center;
     gap: var(--space-s);
+    pointer-events: auto;
   }
 
   .button {
