--- a/src/pages/cover/[slug].astro
+++ b/src/pages/cover/[slug].astro
@@ -43,8 +43,8 @@ if (!data) {
 const { original, cover, created_at, description, contributor } = data as Cover;
 
 let coveredAs;
-if (original?.name.toLowerCase() !== cover?.name?.toLowerCase()) {
-  coveredAs = cover?.name;
+if (original.name.toLowerCase() !== cover.name?.toLowerCase()) {
+  coveredAs = cover.name;
 }
 
 const title =
@@ -58,7 +58,7 @@ const title =
 
 let tags = [];
 
-const distanceInYears = cover?.album_year!! - original?.album_year!!;
+const distanceInYears = cover.album_year!! - original.album_year!!;
 
 if (distanceInYears >= 50) {
   tags.push("50+ years apart");
@@ -72,12 +72,12 @@ if (distanceInYears >= 50) {
   tags.push("10+ years apart");
 }
 
-const energyDifference = Math.abs(original?.energy!! - cover?.energy!!);
+const energyDifference = Math.abs(original.energy!! - cover.energy!!);
 if (energyDifference >= 0.5) {
   tags.push("big energy difference");
 }
 
-const tempoDifference = cover?.tempo!! - original?.tempo!!;
+const tempoDifference = cover.tempo!! - original.tempo!!;
 if (tempoDifference <= -50) {
   tags.push("50+ BPM slower");
 } else if (tempoDifference <= -40) {
@@ -96,22 +96,22 @@ if (tempoDifference <= -50) {
   tags.push("20+ BPM faster");
 }
 
-if (original?.key !== cover?.key) {
+if (original.key !== cover.key) {
   tags.push("key change");
 }
 
-if (original?.time_signature !== cover?.time_signature) {
+if (original.time_signature !== cover.time_signature) {
   tags.push("time signature change");
 }
 
-const valenceChange = cover?.valence!! - original?.valence!!;
+const valenceChange = cover.valence!! - original.valence!!;
 if (valenceChange >= 0.3) {
   tags.push("happier");
 } else if (valenceChange <= -0.3) {
   tags.push("sadder");
 }
 
-const danceabilityChange = cover?.danceability!! - original?.danceability!!;
+const danceabilityChange = cover.danceability!! - original.danceability!!;
 if (danceabilityChange >= 0.3) {
   tags.push("more danceable");
 } else if (danceabilityChange <= -0.3) {
@@ -119,13 +119,13 @@ if (danceabilityChange >= 0.3) {
 }
 
 if (
-  original?.gender.toString() === "female" &&
-  cover?.gender.toString() === "male"
+  original.gender.toString() === "female" &&
+  cover.gender.toString() === "male"
 ) {
   tags.push("FTM");
 } else if (
-  original?.gender.toString() === "male" &&
-  cover?.gender.toString() === "female"
+  original.gender.toString() === "male" &&
+  cover.gender.toString() === "female"
 ) {
   tags.push("MTF");
 }
@@ -135,7 +135,7 @@ const formattedDate = dayjs(created_at).format("MMMM D, YYYY");
 
 <BaseLayout title={title} description={description!!}>
   <header class="header">
-    <h1 class="title">{original?.name}</h1>
+    <h1 class="title">{original.name}</h1>
     {description && <p class="description">{description}</p>}
     {
       tags && (
