--- a/src/components/CoverComparison.astro
+++ b/src/components/CoverComparison.astro
@@ -119,6 +119,12 @@ if (originalSong.name.toLowerCase() !== coverSong.name.toLowerCase()) {
       overflow-y: hidden;
       grid-template-columns: 85vw 85vw;
       scroll-snap-type: x mandatory;
+      // Hide scrollbars on Chrome, Safari
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      -ms-overflow-style: none; // Edge
+      scrollbar-width: none; // Firefox
     }
   }
 
