--- a/src/components/CoverComparison.astro
+++ b/src/components/CoverComparison.astro
@@ -120,7 +120,7 @@ if (originalSong.name.toLowerCase() !== coverSong.name.toLowerCase()) {
       grid-template-columns: 85vw 85vw;
       scroll-snap-type: x mandatory;
       // Hide scrollbars on Chrome, Safari
-      ::-webkit-scrollbar {
+      &::-webkit-scrollbar {
         display: none;
       }
       -ms-overflow-style: none; // Edge
