--- a/src/components/CoverComparison.astro
+++ b/src/components/CoverComparison.astro
@@ -119,6 +119,12 @@ if (originalSong.name.toLowerCase() !== coverSong.name.toLowerCase()) {
       overflow-y: hidden;
       grid-template-columns: 85vw 85vw;
       scroll-snap-type: x mandatory;
+      // Hide scrollbars on Chrome, Safari
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      -ms-overflow-style: none; // Edge
+      scrollbar-width: none; // Firefox
     }
   }
 
@@ -215,9 +221,11 @@ if (originalSong.name.toLowerCase() !== coverSong.name.toLowerCase()) {
     border-radius: var(--radius-full);
     font-weight: var(--font-weight-bold);
 
-    &:hover {
-      background-color: var(--violet-3);
-      color: var(--violet-12);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        background-color: var(--violet-3);
+        color: var(--violet-12);
+      }
     }
 
     :global(svg) {
