--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,6 +24,51 @@ import Icon from "./Icon.astro";
   </div>
 </footer>
 
+<script>
+  const setTheme = (theme: "light" | "dark") => {
+    const inactiveTheme = theme === "light" ? "dark" : "light";
+    document.body.classList.remove(inactiveTheme);
+    document.body.classList.add(theme);
+
+    const metaTheme = document.querySelector('meta[name="theme-color"]');
+    if (metaTheme !== null)
+      metaTheme.setAttribute(
+        "content",
+        theme === "dark" ? "#121113" : "#FDFCFD"
+      );
+
+    window.localStorage.setItem("theme", theme);
+
+    const lightToggle = document.querySelector("[data-theme-toggle-light]");
+    const darkToggle = document.querySelector("[data-theme-toggle-dark]");
+
+    if (theme === "light") {
+      lightToggle?.classList.add("active");
+      darkToggle?.classList.remove("active");
+    } else {
+      lightToggle?.classList.remove("active");
+      darkToggle?.classList.add("active");
+    }
+  };
+
+  const toggleTheme = () => {
+    // Local storage will have been set in preloadTheme.js
+    const activeTheme = window.localStorage.getItem("theme");
+
+    // Runs on initial page load
+    setTheme(activeTheme as "light" | "dark");
+
+    const lightToggle = document.querySelector("[data-theme-toggle-light]");
+    lightToggle?.addEventListener("click", () => setTheme("light"));
+
+    const darkToggle = document.querySelector("[data-theme-toggle-dark]");
+    darkToggle?.addEventListener("click", () => setTheme("dark"));
+  };
+
+  // Runs on view transition navigation
+  document.addEventListener("astro:after-swap", toggleTheme);
+</script>
+
 <style lang="scss">
   footer {
     width: 100%;
