--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -17,7 +17,7 @@ const { title, description } = Astro.props;
   .header {
     padding-block-start: var(--space-xl);
     padding-block-end: var(--space-3xl);
-    padding-inline: var(--space-m);
+    padding-inline: var(--space-l);
     display: flex;
     flex-direction: column;
     align-items: center;
