--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import CoverCardGrid from "../components/CoverCardGrid.astro";
 import PageHeader from "../components/PageHeader.astro";
+import Tag from "../components/Tag.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { supabase } from "../lib/supabase";
 
@@ -23,6 +24,8 @@ const { data: covers } = await supabase
   <PageHeader
     title="Genderswap.fm"
     description="Some covers deliver the age-old simple pleasures of drag."
-  />
+  >
+    <Tag text="Explore by tag" url="/tagged" />
+  </PageHeader>
   <CoverCardGrid covers={covers as any} />
 </BaseLayout>
