Song search improvements

--- a/src/pages/tagged/index.astro
+++ b/src/pages/tagged/index.astro
@@ -3,7 +3,7 @@ import PageHeader from "../../components/PageHeader.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import TagCloud from "../../components/TagCloud.astro";
 import { TAGS } from "../../types/tags";
-import { Enums } from "../../types/types";
+import { type Enums } from "../../types/types";
 
 const tags = Object.keys(TAGS) as Enums<"tags">[];
 
